[TH2-5132] behaviour.permittedToRemoveNamespace option * added logging and secret value check